* optimize libesedb_checksum_calculate_little_endian_ecc32

Test suite:
* windows search: work on index-based compression
  - create test program to validate output

Notes
* create a root page table instead?
  - no
* read catalog data type defintions and convert them into column definitions?
  - no

20150405
* changes for handling tagged data types in version 0x620 revision 0x14
  database

20150322
* worked on Python bindings
* worked on long value support
* worked on long value error tolerance
* worked on NULL value support (JET_coltypNil)

20150321
* worked on libfdata btree refactor
* changes for long value key compare

20150105
* 2015 update

20141224
* worked on Python 3 support
* worked on tests

20141129
* code clean up

20141110
* code clean up

20141109
* worked on reading backup catalog
* additional checks for out of bound page tags value offset and size values
* worked on libfdata btree refactor

20141026
* changes for deployment

20141019
* changes for deployment

20141014
* worked on utility scripts

20141004
* update Python-bindings tests
* additional checks for out of bound page tags value offset and size values

20141003
* removed README.macosx
* changes for project site move

20140915
* worked on libfdata btree refactor

20140803
* bug fix in Python-bindings

20140726
* updated dependencies

20130406
* worked on Python-bindings
* updated msvscpp files

20130317
* worked on setup.py

20130305
* worked on Python-bindings
* worked on multi value

20130304
* worked on Python-bindings

20130302
* worked on Python-bindings

20130301
* fix in dpkg files
* worked on Python-bindings

20130217
* worked on Python-bindings

20130216
* 2014 update
* updated dependencies
* worked on Python-bindings
* worked on libfdata update
* worked on libfvalue update

20130421
* worked on libfvalue update

20130420
* worked on libfvalue update

20130415
* worked on libfvalue update

20130414
* updated dependencies
* updated macosx files
* textual changes